# opengl-spheres

./: .gitignore  CMakeLists.txt  Makefile  README  gl.c  gl.h  gui.c  gui.glade  gui.h  lab.c  menu.xml
